--- a/environment.yml
+++ b/environment.yml
@@ -5,6 +5,7 @@ channels:
   - wiredlab
 dependencies:
   - intervaltree=2.1.0=py36_0
+  - pyephem=3.7.6.0=py36_0
   - pyorbital=1.3.1=py_0
   - requests-cache=0.4.13=py36_0
   - asn1crypto=0.24.0=py36_0
@@ -120,5 +121,6 @@ dependencies:
   - xz=5.2.4=h14c3975_4
   - zeromq=4.2.5=h439df22_0
   - zlib=1.2.11=ha838bed_2
+  - orbit=0.2=py36_0
 prefix: /home/dan/miniconda3/envs/bazaar
 
