--- a/environment.yml
+++ b/environment.yml
@@ -5,17 +5,28 @@ channels:
   - wiredlab
 dependencies:
   - intervaltree=2.1.0=py36_0
+  - jplephem=2.7=py36_0
+  - nbval=0.9.1=py_0
+  - pudb=2018.1=py36_0
   - pyephem=3.7.6.0=py36_0
   - pyorbital=1.3.1=py_0
   - requests-cache=0.4.13=py36_0
+  - sgp4=1.4=py36_2
+  - skyfield=1.3=py_0
+  - urwid=1.3.1=py36_0
   - asn1crypto=0.24.0=py36_0
+  - astropy=3.0.3=py36h14c3975_2
+  - atomicwrites=1.1.5=py36_0
+  - attrs=18.1.0=py36_0
   - backcall=0.1.0=py36_0
+  - beautifulsoup4=4.6.0=py36h49b8c8c_1
   - blas=1.0=mkl
   - bleach=2.1.3=py36_0
   - ca-certificates=2018.03.07=0
   - certifi=2018.4.16=py36_0
   - cffi=1.11.5=py36h9745a5d_0
   - chardet=3.0.4=py36h0f667ec_1
+  - coverage=4.5.1=py36h14c3975_0
   - cryptography=2.2.2=py36h14c3975_0
   - cycler=0.10.0=py36h93f1223_0
   - dbus=1.13.2=h714fa37_1
@@ -66,6 +77,7 @@ dependencies:
   - mkl=2018.0.3=1
   - mkl_fft=1.0.1=py36h3010b51_0
   - mkl_random=1.0.1=py36h629b387_0
+  - more-itertools=4.2.0=py36_0
   - nbconvert=5.3.1=py36hb41ffb7_0
   - nbformat=4.4.0=py36h31c9010_0
   - ncurses=6.1=hf484d3e_0
@@ -82,17 +94,28 @@ dependencies:
   - pexpect=4.6.0=py36_0
   - pickleshare=0.7.4=py36h63277f8_0
   - pip=10.0.1=py36_0
+  - pluggy=0.6.0=py36hb689045_0
   - prompt_toolkit=1.0.15=py36h17d85b1_0
+  - psutil=5.4.5=py36h14c3975_0
   - ptyprocess=0.5.2=py36h69acd42_0
+  - py=1.5.3=py36_0
+  - pycodestyle=2.4.0=py36_0
   - pycparser=2.18=py36hf9f622e_1
   - pygments=2.2.0=py36h0d3125c_0
   - pyopenssl=18.0.0=py36_0
   - pyparsing=2.2.0=py36hee85983_1
   - pyqt=5.9.2=py36h751905a_0
   - pysocks=1.6.8=py36_0
+  - pytest=3.6.0=py36_1
+  - pytest-arraydiff=0.2=py36_0
+  - pytest-astropy=0.4.0=py36_0
+  - pytest-doctestplus=0.1.3=py36_0
+  - pytest-openfiles=0.3.0=py36_0
+  - pytest-remotedata=0.3.0=py36_0
   - python=3.6.5=hc3d631a_2
   - python-dateutil=2.7.3=py36_0
   - pytz=2018.4=py36_0
+  - pyyaml=3.12=py36hafb9ca4_1
   - pyzmq=17.0.0=py36h14c3975_0
   - qt=5.9.5=h7e424d6_0
   - qtconsole=4.3.1=py36h8f73b5b_0
@@ -119,8 +142,11 @@ dependencies:
   - wheel=0.31.1=py36_0
   - widgetsnbextension=3.2.1=py36_0
   - xz=5.2.4=h14c3975_4
+  - yaml=0.1.7=had09818_2
   - zeromq=4.2.5=h439df22_0
   - zlib=1.2.11=ha838bed_2
   - orbit=0.2=py36_0
+  - pip:
+    - satbazaar==0.0.1
 prefix: /home/dan/miniconda3/envs/bazaar
 
