fixup get-stations machinery

--- a/satbazaar/satbazaar.cfg
+++ b/satbazaar/satbazaar.cfg
@@ -17,7 +17,7 @@ db_api = https://db.satnogs.org/api
 satellites_url = ${db_api}/satellites
 
 
-[file]
-name = file
-stations_url = network-stations.json
+#[file]
+#name = file
+#stations_url = network-stations.json
 
