--- a/satbazaar/satbazaar.cfg
+++ b/satbazaar/satbazaar.cfg
@@ -2,9 +2,11 @@
 network = SatNOGS
 
 
-stations_file = stations.json
-satellites_file = satellites.json
-tle_db = tle.sqlite
+stations_file = ../data/stations.json
+satellites_file = ../data/satellites.json
+tle_db = ../data/tle.sqlite
+passes_db = ../data/passes.sqlite
+observations_file = ../data/observations.json.bz2
 
 name =
 
