--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 jupyter_notebooks/*.pkl
 broker/__pycache__
-**/.ipynb_checkpoints
-**/.pytest_cache
+.ipynb_checkpoints
+.pytest_cache
 *.egg-info
 __pycache__
 .satbazaar-db-cache.sqlite
