update observations stats

--- a/satbazaar/satbazaar.cfg
+++ b/satbazaar/satbazaar.cfg
@@ -6,7 +6,7 @@ stations_file = ../data/stations.json
 satellites_file = ../data/satellites.json
 tle_db = ../data/tle.sqlite
 passes_db = ../data/passes.sqlite
-observations_file = ../data/observations.json.gz
+observations_file = ../data/observations.json
 
 name =
 
