--- a/environment.yml
+++ b/environment.yml
@@ -4,13 +4,20 @@ channels:
   - conda-forge
   - wiredlab
 dependencies:
+  - ipython
+  - jupyter
+  - ephem
+  - requests
+  - requests-cache
+
+prefix: /home/dan/miniconda3/envs/bazaar
+old:
   - intervaltree=2.1.0=py36_0
   - jplephem=2.7=py36_0
   - nbval=0.9.1=py_0
   - pudb=2018.1=py36_0
   - pyephem=3.7.6.0=py36_0
   - pyorbital=1.3.1=py_0
-  - requests-cache=0.4.13=py36_0
   - sgp4=1.4=py36_2
   - skyfield=1.3=py_0
   - urwid=1.3.1=py36_0
@@ -120,7 +127,6 @@ dependencies:
   - qt=5.9.5=h7e424d6_0
   - qtconsole=4.3.1=py36h8f73b5b_0
   - readline=7.0=ha6073c6_4
-  - requests=2.18.4=py36he2e5f8d_1
   - scipy=1.1.0=py36hfc37229_0
   - seaborn=0.8.1=py36hfad7ec4_0
   - send2trash=1.5.0=py36_0
@@ -147,5 +153,4 @@ dependencies:
   - zlib=1.2.11=ha838bed_2
   - pip:
     - satbazaar==0.0.1
-prefix: /home/dan/miniconda3/envs/bazaar
 
