--- a/environment.yml
+++ b/environment.yml
@@ -7,6 +7,7 @@ dependencies:
   - ipython
   - ipython-sql
   - jupyter
+  - jupyter_contrib_nbextensions
   - ephem
   - matplotlib
   - intervaltree
